shadow cropping fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -127,6 +127,7 @@
 
 .habit-list {
   overflow-y: scroll;
+  overflow: visible;
 }
 
 .open-nav {
